# stream-cli-player

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
client/: main.cpp
helper/: main.cpp
server/: main.cpp
server/public/: index.html  styles.css
